# farmsetu-task

./: README.md  pyproject.toml
api/: admin.py  enum.py  serializer.py  urls.py
api/migrations/: 0001_initial.py
api/models/: __init__.py  model.py
api/views/: __init__.py  metoffice.py
backend/: celery.py  settings.py  tasks.py  urls.py
backend/backend/: settings.py
